gccida/g2/equiv_constant
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/equiv_constant/src/cse.c:4822:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/equiv_constant/src/cse.c:4844:22: error: expected identifier or '('
 struct cse_reg_info = get_cse_reg_info( rtint); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/equiv_constant/src/cse.c:4858:33: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart_if_possible( ( machine_mode)*( ( unsigned __int8 *)v1 + 2), const_rtx); 
                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/equiv_constant/src/obj/cse.o] Error 1
